Fix dark mode theme

--- a/styles/index.css
+++ b/styles/index.css
@@ -78,15 +78,15 @@ button{
   50% { border-color: white; }
 }
 
-#login{
+#login {
   position: absolute;
-  background: rgba(0, 0, 0, 0.60);
+  background: rgba(0, 0, 0, 0.6);
   color: #f1f1f1;
-  width: 100%;
-  height: 100%;
-  padding: 50px;
+  padding-top: 50px;
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
+  top: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
-
-
